<resources>
    <array name="StarHotel">
        <item>One Star</item>
        <item>Two Star</item>
        <item>Three Star</item>
        <item>Four Star</item>
        <item>Five Star</item>
    </array>

    <array name="Breakfast">
        <item>Yes</item>
        <item>No</item>
    </array>
    <string name="app_name">Peak&amp;Find</string>

    <string-array name="Children">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Rooms">
        <item>Single</item>
        <item>Double</item>
        <item>Family</item>
        <item>Luxury</item>
    </string-array>

    <string-array name="roomNo">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Name">
        <item>One</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>

    <string-array name="TableTime">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Tea Time</item>
    </string-array>
    <string-array name="People">
        <item>One Person</item>
        <item>Couple</item>
        <item>3 Persons</item>
        <item>4 Persons</item>
        <item>More than 5 persons</item>
    </string-array>

    <array name="StarHotel">
        <item>One Star</item>
        <item>Two Star</item>
        <item>Three Star</item>
        <item>Four Star</item>
        <item>Five Star</item>
    </array>

    <array name="Breakfast">
        <item>Yes</item>
        <item>No</item>
    </array>

    <string-array name="Adults">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="btnbooknow">Book Now</string>


    <string name="editcompanyname">COMPANY NAME</string>
    <string name="editcity">CITY</string>
    <string name="editmobileno">MOBILE NO</string>
    <string name="editemail">E-MAIL</string>
    <string name="editcabownerdetails">CAB SERVICE DETAILS</string>
    <string name="save">SAVE</string>
    <string name="edittextownername">owner name</string>
    <string name="textcompanyname">company name</string>
    <string name="citylayout">City:</string>
    <string name="mobilelayout">Mobile:</string>
    <string name="emaillayout">Email:</string>
    <string name="buttobBook">BOOK</string>
    <string name="vehicletype">VEHICLE TYPES</string>
    <string name="taxibooking">TAXI BOOKING</string>
    <string name="customername">CUSTOMER NAME</string>
    <string name="pickuplocation">PICKUP LOCATION</string>
    <string name="destination">DESTINATION</string>
    <string name="pickupdate" />
    <string name="pickupdates">PICKUP DATE</string>
    <string name="pickuptime">PICKUP TIME</string>
    <string name="mobileno">MOBILE NO</string>
    <string name="vehicletypeS">VEHICLE TYPE</string>
    <string name="pickuplocationtext">Pickup Location</string>
    <string name="customernametext">Customer Name</string>
    <string name="destinationtext">Destination</string>
    <string name="pickupdatetext">Pickup Date</string>
    <string name="picktimetext">Pickup Time</string>
    <string name="mobilenumbertext">Mobile No</string>
    <string name="vehicletypetext">Vehicle Type</string>


    <string name="text1">Amari Galle</string>
    <string name="text2">Galle, 4.2Km from center:</string>
    <string name="text3">Breakfast Included</string>
    <string name="text4">Show on map</string>
    <string name="text5">Facilities</string>
    <string name="text6">Free Parking</string>
    <string name="text7">Food And Drink</string>
    <string name="text8">Free WiFi</string>
    <string name="text9">Car Hire</string>
    <string name="text10">Activity And Entertainment</string>
    <string name="text11"> * Fitness Centre</string>
    <string name="text12"> * Spa Centre</string>
    <string name="text13"> * Massage Centre</string>
    <string name="text14"> * Outdoor Pool</string>
    <string name="text15">+0912244667</string>
    <string name="text16">No account needed! Booking takes just two minutes</string>
    <string name="text17">Confirmation is immediate.</string>
    <string name="text18">No booking fees!</string>
    <string name="text19">523c Colombo - Galle Main Rd, Galle</string>
    <string name="text20">RESERVE</string>
    <string name="text21">Check-in-date</string>
    <string name="text22">Check-out-date</string>
    <string name="text23">Customer Name:</string>
    <string name="text24">Contact Number:</string>

    <string name="text25">S.D.L.Nanayakkara</string>
    <string name="text26">0775602520</string>

    <string-array name="Adults">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="text27">Adults</string>

    <string-array name="Children">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="text28">Children</string>
    <string name="text29">Select Your Room</string>
    <string-array name="Rooms">
        <item>Single</item>
        <item>Double</item>
        <item>Family</item>
        <item>Luxury</item>
    </string-array>
    <string name="text30">Number Of Rooms</string>

    <string-array name="roomNo">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="text31">1 extra-large double bed</string>
    <string name="text32">Has a balcony</string>
    <string name="text33">Price for:</string>
    <string name="text34">Price of one room for one night</string>
    <string name="text35">LKR 15,500</string>
    <string name="text36">+LKR 1,200 taxes and charges</string>
    <string name="text40">Nanayakkara123@gmail.com</string>

    <string name="NAME">NAME</string>
    <string name="button2">DELETE</string>
    <string name="textp1">Name:</string>
    <string name="textp2">E-mail:</string>
    <string name="texy3">Phone Number:</string>
    <string name="btn">Save Change</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <string name="customer">Customert</string>
    <string name="cab">Cab</string>
    <string name="hotel">Hotel</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="setHotel">Enter Hotel Name</string>
    <string name="setLoction">Enter Hotel Location</string>
    <string name="GetHotelName">Hotel Name</string>
    <string name="GetLocation">Hotel Location</string>
    <string name="SaveButton">Save Details</string>
    <string name="nextActivity">View List</string>
    <string name="TableReserve">Reserve Table</string>
    <string name="EventReserve">Reserve Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datebutton">Select Date</string>

    <string name="TimeSelect">Select Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Peopleselect">Select People</string>

    <string name="Reservation">Make Reservation</string>


    <string name="UpdateBtn">Update Reservation</string>

    <string name="deletebtn">Delete Reservation</string>

    <string name="nights">Number Of Nights</string>
    <string name="title_activity_hotel_customer_reserved_list">HotelCustomerReservedList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="btnbook">ROOM BOOKING</string>
    <string name="btntable">TABLE RESERVATION</string>


    <string name="btnUpdate">UPDATE RESERVATION</string>
    <string name="btnDelete">CANCEL RESERVATION</string>
    <string-array name="Adults">
        <item>One person</item>
        <item>Two persons</item>
        <item>Tree persons</item>
        <item>More than 4 persons</item>
    </string-array>
    <string-array name="Rooms">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>Family Room</item>
        <item>Luxury Room</item>
    </string-array>
    <string-array name="roomNo">
        <item>One Room</item>
        <item>Two Rooms</item>
        <item>Tree Rooms</item>
        <item>Four Rooms</item>
    </string-array>
    <string-array name="Name">
        <item>One</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
    </string-array>
    <string-array name="Nights">
        <item>One Night</item>
        <item>two Nights</item>
        <item>three Nights</item>
        <item>More Than Three Nights</item>
    </string-array>
    <string-array name="TableTime">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Tea Time</item>
    </string-array>
    <string-array name="People">
        <item>One Person</item>
        <item>Couple</item>
        <item>3 Persons</item>
        <item>4 Persons</item>
        <item>More than 5 persons</item>
    </string-array>
    <string name="UpdateBtn">Update Reservation</string>
    <string name="deletebtn">Delete Reservation</string>
    <string name="title_activity_maps">mapvalue</string>
    <string name="emailtext">Email</string>
    <string name="mobilenotext">Mobile</string>
    <string name="citytext">City</string>
    <string name="ownernametext">Owner Name</string>
    <string name="mobileNo">Mobile</string>
    <string name="city">City</string>
    <string name="companyName">Company Name</string>
    <string name="ownerName">Owner Name</string>
    <string name="cabOwnerDetails">Cab owner Details</string>
    <string name="entervehicletext">Enter Vehicle</string>
    <string name="companynametext">Company Name</string>
    <string name="editcabownerdetails">Cab Owner Detail</string>
    <string name="editownername">Edit owner</string>

    <string name="btnregistercabowner">Register Cab Owner</string>
    <string name="btncabownerlist">Cab Owners</string>
    <string name="btnupdateview">Update</string>
    <string name="btnviewbooking">VIEW BOOKING</string>
    <string name="customernameview">CUSTOMER NAME</string>
    <string name="pickuplocationview">PICKUP LOCATION</string>
    <string name="destinationview">DESTINATION</string>
    <string name="pickupdateview">PICKUP DATE</string>
    <string name="picktimeview">pickup time</string>
    <string name="pickuptimeview">PICKUP TIME</string>
    <string name="mobilenoview">MOBILE NO</string>
    <string name="vehicletypeview">VEHICLE TYPE</string>
    <string name="date">Date</string>
    <string name="date1">Date</string>
    <string name="btnviewbooking1">VIEW BOOKING</string>
    <string name="entercontactnumber">con</string>
    <string name="entername">nameeee</string>
    <string name="contactnumber">fadc</string>

    <array name="Breakfast">
        <item>Breakfast Include</item>
        <item>Breakfast not Included</item>
    </array>
</resources>
