<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/room3"
    tools:context=".Activity2">
    
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="#33ccff">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:shadowColor="@android:color/holo_blue_dark"
        android:text="@string/text1"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/background_dark"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="364dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_shape"
        android:text="@string/text25"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="364dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/input_shape"
        android:text="@string/text26"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/custom_button2"
        android:text="@string/text21"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="215dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="224dp" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="54dp"
        android:layout_height="36dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/input_shape"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/input_shape"
        android:text="@string/text27"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/input_shape"
        android:text="@string/text28"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="52dp"
        android:layout_height="34dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/input_shape" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/input_shape"
        android:text="@string/text29"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/input_shape"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/input_shape"
        android:text="@string/text30"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="370dp"
        android:background="@drawable/input_shape"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="98dp"
        android:layout_height="41dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="420dp"
        android:text="@string/text33"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="420dp"
        app:srcCompat="@drawable/twopersons" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="450dp"
        android:text="@string/text31"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="450dp"
        app:srcCompat="@drawable/doublebed" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="369dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="480dp"
        android:text="@string/text34"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="500dp"
        android:text="@string/text35"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="363dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="540dp"
        android:text="@string/text36"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="565dp"
        android:text="@string/text15"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="590dp"
        android:background="@drawable/custom_button"
        android:text="@string/text20"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/back" />


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="7dp"
        app:srcCompat="@drawable/pro" />


</RelativeLayout>